assets/css/style.css
/* ... */
    /*----------------------------------------------
        MOD: MARKER OUTLINE
    ----------------------------------------------*/
    .marker-outline .timeline-marker:before {
      background: transparent;
      border-color: #fff;
    }
    .marker-outline .timeline-item:hover .timeline-marker:before {
      background: #fff;
    }
/*===========================
END TimeLine
===========================*/


@media only screen and (max-width: 1200px) and (min-width: 992px) {
    .screen-area img.screen-img {
        bottom: 169px !important;
        width: 425px !important;
        height: 463px !important;
    }
}

#team .ptb--100 {
    padding-bottom: 0 !important;
}

#team .container .section-title {
    margin-bottom: 0 !important;
}

#team .container .section-title a {
    font-size: 17px;
    color: #ff9f1c;
    font-family: 'Poppins', sans-serif;
}

#timeline h2:before{
    background-color: #FFFFFF !important;
}

#timeline h2:after{
    background-color: #FFFFFF !important;
}

#screenshot h2:before{
    background-color: #FFFFFF !important;
}

#screenshot h2:after{
    background-color: #FFFFFF !important;
}

